# mask

./: CMakeLists.txt  NV--使用说明  README.md  main.cpp
cfg/: coco.data  voc-BED.data  voc-ChinaElec.data  voc-WENBO.data  voc-stone.data  voc-test.data  yolov3 (copy).cfg  yolov3-voc-BED.cfg  yolov3-voc-ChinaElec.cfg  yolov3-voc-WENBO.cfg  yolov3-voc-faceMask.cfg  yolov3-voc-stone.cfg  yolov3-voc-stone_1.cfg  yolov3-voc-test.cfg  yolov3.cfg
document/: detection_data.txt
images/: maskdetec.desktop  maskdetection.desktop
include/: maskdistance.h
